Updated config to work with server

--- a/storageserver/config.ini
+++ b/storageserver/config.ini
@@ -1,7 +1,7 @@
 [lacthosa]
-host = 127.0.0.1
+host = 10.0.31.255
 port = 443
-filepath = json-testfiles/
+filepath = weather-stations/
 
 [web-interface]
 host = 127.0.0.1
